--- a/page1.html
+++ b/page1.html
@@ -2,7 +2,22 @@
 <html>
      <head>
           <title>Page 1 Title</title>
-     </head>
+          <style>
+                 body {
+                   background-color: lightblue;
+                 }
+                 h1 {
+                   color: white;
+                   text-align: center;
+                 }
+                 
+                 p {
+                   font-family: verdana;
+                   font-size: 20px;
+                 } 
+          </style>     
+
+</head>
 <body>
      <h1>First heading</h1>
      <p>first paragraph</p>
