--- a/page1.html
+++ b/page1.html
@@ -2,21 +2,7 @@
 <html>
      <head>
           <title>Page 1 Title</title>
-          <style>
-                 body {
-                   background-color: lightblue;
-                 }
-                 h1 {
-                   color: white;
-                   text-align: center;
-                 }
-                 
-                 p {
-                   font-family: verdana;
-                   font-size: 20px;
-                 } 
-          </style>     
-
+          <link rel="stylesheet" href="styles.css">
 </head>
 <body>
      <h1>First heading</h1>
