add some new features

--- a/page1.html
+++ b/page1.html
@@ -8,5 +8,6 @@
      <h1>First heading</h1>
      <p>first paragraph</p>
      <p>second paragraph</p>
+     <p>third paragraph</p>
 </body>
 </html>
